--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 *.userosscache
 *.sln.docstates
 
+./node_modules
+package-lock.json
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
