--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode=development",
-    "serve": "webpack serve --mode=development"
+    "serve": "webpack serve --mode=development",
+    "gitHubStart": "git subtree push --prefix build origin gh-pages"
   },
   "keywords": [],
   "author": "",
