--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode=development",
+    "build": "webpack --mode=production",
     "serve": "webpack serve --mode=development",
     "gitHubStart": "git subtree push --prefix build origin gh-pages"
   },
